fixed gif spacing and background

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ header {
 }
 
 body{
-    background-color: aquamarine;
+    background-image: url(/Vaporwave.png);
 }
 
 h1{
@@ -27,4 +27,15 @@ footer{
 
 p{
     text-align: center;
+}
+
+#imageContainer{
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    gap: 16px;
+    padding: 16px;
+}
+
+.navbar-custom{
+    background-color: rgb(46, 20, 119);
 }
